fix: URL-only webmentions should wrap anywhere

--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -159,6 +159,6 @@
   margin: 2em 0;
 }
 
-.webmentions li {
-  line-break: loose;
+.webmentions .url-only {
+  line-break: anywhere;
 }
